--- a/app/views/poke_mailer/thanks_for_poke.html.slim
+++ b/app/views/poke_mailer/thanks_for_poke.html.slim
@@ -1,9 +1,21 @@
-p Olá #{@poke.user.first_name},
+p= poke.user.name,
 
-p É muito importante saber que diversos cidadãos como você estão unidos no combate aos abusos nos vagões e estações do Metrô. Essa é uma demanda antiga de diversos paulistanos e agora temos a oportunidade de exigir que a verba de comunicação do Metrô seja utilizada em uma campanha massiva contra esse tipo de crime recorrente. Chega de propagandas auto-elogiosas, sem conteúdo e informação!
+p Você agora faz parte do grupo de mobilizadores dispostos a enfrentar o poder dos militares e será notificado para agir em nome da desmilitarização da justiça.
 
-p Compartilhe o link da mobilização com seus amigos e familiares. Vamos mostrar para o presidente do Metrô que apenas repudiar o absurdo cometido pela propaganda na rádio Transámerica não será suficiente: #{link_to root_url, root_url}
+p A primeira etapa do nosso plano de ação é enviar um email para o relator da ADPF 289, ministro Gilmar Mendes, pedindo que acabe com esse resquício de ditadura e tire os civis do banco dos reús do tribunal militar.
 
-p Obrigada,
+p O email do ministro Gilmar Mendes é audienciasgilmarmendes@stf.jus.br
 
-p Anna, Alessandra, Miguel, e todos os entusiastas do Minha Sampa
+p Guilherme, Rodrigo, Alessandra e toda a equipe da Rede Meu Rio
+
+p PS: Caso prefira, você pode copiar e enviar o texto abaixo para o relator Gilmar Mendes.,
+
+p "Sr(a). Ministro(a) do Supremo Tribunal Federal Gilmar Mendes,
+
+p O senhor é o relator da ADPF 289, que argui a inconstitucionalidade do julgamento de civis por tribunais militares.
+
+p Como o senhor deve saber, o julgamento de um civil por um tribunal militar é feito com base no Código Penal Militar de 1969. Para nós, cidadãos, isso representa uma afronta  à democracia.
+
+p Por isso, pedimos que julgue favoravelmente o pedido da Procuradoria Geral da República.
+
+p Obrigado
