[#74981548] fix poke mailer

--- a/app/views/poke_mailer/thanks_for_poke.html.slim
+++ b/app/views/poke_mailer/thanks_for_poke.html.slim
@@ -1,4 +1,4 @@
-p= poke.user.name,
+p #{poke.user.name},
 
 p Você agora faz parte do grupo de mobilizadores dispostos a enfrentar o poder dos militares e será notificado para agir em nome da desmilitarização da justiça.
 
