--- a/app/views/poke_mailer/thanks_for_poke.html.slim
+++ b/app/views/poke_mailer/thanks_for_poke.html.slim
@@ -8,7 +8,7 @@ p O email do ministro Gilmar Mendes é audienciasgilmarmendes@stf.jus.br
 
 p Guilherme, Rodrigo, Alessandra e toda a equipe da Rede Meu Rio
 
-p PS: Caso prefira, você pode copiar e enviar o texto abaixo para o relator Gilmar Mendes.,
+p PS: Caso prefira, você pode copiar e enviar o texto abaixo para o relator Gilmar Mendes.
 
 p "Sr(a). Ministro(a) do Supremo Tribunal Federal Gilmar Mendes,
 
@@ -18,4 +18,4 @@ p Como o senhor deve saber, o julgamento de um civil por um tribunal militar é 
 
 p Por isso, pedimos que julgue favoravelmente o pedido da Procuradoria Geral da República.
 
-p Obrigado
+p Obrigado"
