[#74981548] change slide-1 layout and add replace the old webfont

--- a/app/assets/stylesheets/app.css.sass
+++ b/app/assets/stylesheets/app.css.sass
@@ -1,14 +1,12 @@
 // Cores
-$yellow: #fdb913
-$red: #ed145b
-$pink: #ed145b
-$green: #00AF74
+$blue: #0BBCE8
+$blue-dark: #033665
+$yellow: #FFCF00
+
 $facebook-blue: #3d5a9b
 $twitter-blue: #25bce8
-$light-gray: #aaaaaa
-$form-bg: #54575c
 
-$primary-color: $green
+$primary-color: $blue
 
 // Libraries
 @import foundation_and_overrides
