--- a/app/assets/stylesheets/fonts.sass
+++ b/app/assets/stylesheets/fonts.sass
@@ -27,8 +27,22 @@
   font-style: normal
 
 @font-face
-  font-family: 'Brush Up'
-  src: font-url('BrushUp.eot')
-  src: font-url('BrushUp.eot?#iefix') format('embedded-opentype'), font-url('BrushUp.woff') format('woff'), font-url('BrushUp.ttf') format('truetype'), font-url('BrushUp.svg#proxima_nova_softbold') format('svg')
+  font-family: 'Garage Gothic'
+  src: font-url('garagegothicregular-webfont.eot')
+  src: font-url('garagegothicregular-webfont.eot?#iefix') format('embedded-opentype'), font-url('garagegothicregular-webfont.woff') format('woff'), font-url('garagegothicregular-webfont.ttf') format('truetype'), font-url('garagegothicregular-webfont.svg') format('svg')
   font-weight: normal
+  font-style: normal
+
+@font-face
+  font-family: 'Garage Gothic'
+  src: font-url('garagegothicbold-webfont.eot')
+  src: font-url('garagegothicbold-webfont.eot?#iefix') format('embedded-opentype'), font-url('garagegothicbold-webfont.woff') format('woff'), font-url('garagegothicbold-webfont.ttf') format('truetype'), font-url('garagegothicbold-webfont.svg') format('svg')
+  font-weight: bold
+  font-style: normal
+
+@font-face
+  font-family: 'Garage Gothic'
+  src: font-url('garagegothicblack-webfont.eot')
+  src: font-url('garagegothicblack-webfont.eot?#iefix') format('embedded-opentype'), font-url('garagegothicblack-webfont.woff') format('woff'), font-url('garagegothicblack-webfont.ttf') format('truetype'), font-url('garagegothicblack-webfont.svg') format('svg')
+  font-weight: bolder
   font-style: normal
