--- a/app/views/layouts/_google_analytics.html.slim
+++ b/app/views/layouts/_google_analytics.html.slim
@@ -3,5 +3,5 @@ javascript:
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-26278513-22', 'minhasampa.org.br');
+  ga('create', 'UA-26278513-23', 'auto');
   ga('send', 'pageview');
