[#74981548] fix modernizr path

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,7 +9,7 @@ html
     meta property="og:url" content=request.url
     title Desmilitarização da Justiça
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag "vendor/modernizr"
+    = javascript_include_tag "http://modernizr.com/downloads/modernizr-latest.js"
     = favicon_link_tag 'favicon.png'
     = csrf_meta_tags
   body
