--- a/app/views/pokes/new.html.slim
+++ b/app/views/pokes/new.html.slim
@@ -72,7 +72,7 @@
   p Precisamos unir forças e preparar uma mobilização histórica para pressionar os ministros do STF na semana do voto. Compartilhe essa página com pessoas que você acredita que gostariam de fazer parte dessa rede de mobilizadores.
   .share-buttons
     = link_to "Compartilhe no Facebook", "https://www.facebook.com/sharer/sharer.php?u=#{URI::encode(root_url)}", class: ["button", "facebook-share"]
-    = link_to "Compartilhe no Twitter", "https://twitter.com/share?url=#{URI::encode('http:bit.ly/nãopassarão')}&text=#{URI::encode(t('share.twitter.tweet'))}&hashtags=#{URI::encode('abusadoresnãopassarão')}", class: ["button", "twitter-share"]
+    = link_to "Compartilhe no Twitter", "https://twitter.com/share?url=#{URI::encode('http://bit.ly/desmilitarizacaodajustica')}&text=#{URI::encode(t('share.twitter.tweet'))}", class: ["button", "twitter-share"]
   a.close-reveal-modal &#215;
 /
 / #gandalf.medium.reveal-modal{data-reveal=true}
